# memorizer

./: .gitignore  .railwayignore  DESIGN.md  Dockerfile  PLAN-PHASE4.md  PLAN.md  pyproject.toml
.claude/: settings.local.json
app/: capture.py  db.py  fetchers.py  fsrs_service.py  llm.py  main.py  models.py  pipeline.py  podcasts.py  schemas.py  spotify.py  spotify_sync.py
app/static/: index.html
ios/: project.yml
ios/Memorizer/: API.swift  MemorizerApp.swift
ios/Memorizer.xcodeproj/: project.pbxproj
ios/Memorizer.xcodeproj/project.xcworkspace/xcuserdata/josh.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Memorizer.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Memorizer/Views/: CardsView.swift  HomeView.swift  ReviewView.swift
ios/Memorizer/Voice/: VoiceSession.swift  VoiceView.swift
ios/ShareExtension/: Info.plist  ShareViewController.swift
tests/: conftest.py  test_auth.py  test_capture.py  test_cards.py  test_fetchers.py  test_inbox.py  test_llm.py  test_models.py  test_paywall.py  test_pipeline.py  test_podcasts.py  test_profile.py  test_review.py  test_spotify.py  test_tts.py  test_ui.py
