[project]
name = "memorizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "fsrs>=6.3.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
